--- a/buzz_lc.Rmd
+++ b/buzz_lc.Rmd
@@ -307,8 +307,12 @@ datatable(wishlist_aggregated %>%
             # retain wishlisted items over 2
             left_join((wishlist_aggregated %>% select(`Item Name`, `Item Slot`,`Instance Name`, ` `) %>% group_by(`Item Name`)), by = "Item Name") %>% 
             # reintroduce item data and wowhead link, remove duplicate rows
+            mutate(across(c(`Item Slot`),factor)) %>% 
+            #factor item slot
             select(`Item Name`, `Item Slot`, Wishlisted, Count, `Instance Name`, ` `, ) %>% 
+            # reduce columns
             distinct()
+            # remove dupes
             , class = 'display cell-border stripe hover row-border', filter = 'top', extensions = c('ColReorder', 'Scroller', 'Buttons'), 
           escape = FALSE, rownames = FALSE, options = list(pageLength = 25, colReorder = TRUE, deferRender = TRUE, scrollY = 500, scroller = TRUE, dom = 'Blfrtip',
                         buttons = c('copy', 'csv', 'excel')),
